--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/axios": "^5.9.5",
     "axios": "^0.19.2",
     "bootstrap-vue": "^2.5.0",
     "dotenv": "^8.2.0",
     "nuxt": "^2.11.0",
+    "nuxt-fontawesome": "^0.4.0",
+    "typography": "^0.16.19",
     "vue-server-renderer": "^2.6.11",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.8",
     "@nuxtjs/eslint-config-typescript": "^1.0.2",
+    "@nuxtjs/tailwindcss": "^1.3.3",
     "@vue/composition-api": "^0.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
@@ -30,6 +37,8 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.2.1",
-    "prettier": "^1.19.1"
+    "node-sass": "^4.13.1",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2"
   }
 }
